--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,21 @@ theme: jekyll-theme-minimal
 
 title: <mytitle>
 github: is\_project\_page:false
+
+owner:
+  name: Ted Laderas
+  avatar: bio-photo.jpg
+  bio: "This is a sample Jekyll academic website."
+  email: laderast@ohsu.edu
+  # Do not include the @ symbol in your Twitter username
+  twitter: laderast
+  linkedin: #username
+  github: laderast
+  orcid: # ID Number (ex. 0000-0000-0000-0000)
+  researchgate: #username
+  mendeley: #username
+  google:
+    plus: #username
+    analytics:
+    verify:
+    scholar: #id
