--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,12 @@ theme: jekyll-theme-minimal
 github: is\_project\_page:false
 title: <mytitle>
 
-# Collections
-collections:
-  publications:
-    output: true
-    permalink: /:collection/:path/
+include:
+  - _pages
+  
+defaults: 
+  - scope:
+      path: "_pages"
+      type: "pages"
+    values:
+      permalink: /:basename/ # make URL of pages in the folder _pages as on the root.
