--- a/_config.yml
+++ b/_config.yml
@@ -11,4 +11,4 @@ defaults:
       path: "_pages"
       type: "pages"
     values:
-      permalink: /:basename/ # make URL of pages in the folder _pages as on the root.
+      permalink: /:basename/test # make URL of pages in the folder _pages as on the root.
