--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ theme: minima
 
 github: is\_project\_page:false
 
-title: my title! 
+title: David C. Elzinga 
 author: David Elzinga
 email: delzinga@vols.utk.edu
 twitter_username: ElzingaDavid
