--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@ author: David Elzinga
 email: delzinga@vols.utk.edu
 twitter_username: ElzingaDavid
 github_username: David-Elzinga
-location: "Knoxville, TN"
-googlescholar: "https://scholar.google.com/citations?user=me81jzoAAAAJ&hl=en&oi=sra"
-researchgate: "https://www.researchgate.net/profile/David_Elzinga3"
-orcid: "https://orcid.org/0000-0003-1739-6059"
+location: Knoxville, TN
+googlescholar: https://scholar.google.com/citations?user=me81jzoAAAAJ&hl=en&oi=sra
+researchgate: https://www.researchgate.net/profile/David_Elzinga3
+orcid: https://orcid.org/0000-0003-1739-6059
 
 
